--- a/portfolio/assets/css/main.css
+++ b/portfolio/assets/css/main.css
@@ -17,17 +17,18 @@
 	--gray5: #1c4f6e;
 	--gray6: #12181b;
 
-	--blue: #0084a5;
+	--blue: #0097f9;
 	--red: #f54400;
 	--purple: #a82dd1;
 	--yellow: #fff565;
 
 	--darkHL: #e3ba00;
-	--lightHL: #f2849e;
+	--lightHL: var(--blue);
 }
 
 .light {
 	--bg: var(--gray0);
+	--not-bg: var(--gray6);
 	--highlight: var(--lightHL);
 	--bg-nav: linear-gradient(to right, var(--gray1), var(--gray3));
 	--bg-dropdown: var(--gray0);
@@ -38,7 +39,8 @@
 }
 
 .dark {
-	--bg: var(--gray5);
+	--bg: var(--gray6);
+	--not-bg: var(--gray0);
 	--highlight: var(--darkHL);
 	--bg-nav: linear-gradient(to right, var(--gray5), var(--gray6));
 	--bg-dropdown: var(--gray6);
@@ -47,6 +49,70 @@
 	--bg-solor: var(--blue);
 	--header-color: var(--red);
 }
+
+.switch {
+	position: relative;
+	left:75%;
+	display: inline-block;
+	width: 60px;
+	height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+	opacity: 0;
+	width: 0;
+	height: 0;
+}
+
+/* The slider */
+.slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: var(--highlight);
+	-webkit-transition: .4s;
+	transition: .4s;
+}
+
+.slider:before {
+	position: absolute;
+	content: "";
+	height: 26px;
+	width: 26px;
+	left: 4px;
+	bottom: 4px;
+	background-color: white;
+	-webkit-transition: .4s;
+	transition: .4s;
+}
+
+input:checked+.slider {
+	background-color: var(--highlight);
+}
+
+input:focus+.slider {
+	box-shadow: 0 0 1px var(--highlight);
+}
+
+input:checked+.slider:before {
+	-webkit-transform: translateX(26px);
+	-ms-transform: translateX(26px);
+	transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+	border-radius: 34px;
+}
+
+.slider.round:before {
+	border-radius: 50%;
+}
+
 
 
 html, body, div, span, applet, object,
@@ -73,6 +139,36 @@ footer, header, hgroup, menu, nav, section {
 
 body {
 	line-height: 1;
+}
+
+.techBlock {
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	-ms-appearance: none;
+	appearance: none;
+	-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+	-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+	-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+	transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+	background-color: transparent;
+	border-radius: 4px;
+	border: 0;
+	box-shadow: inset 0 0 0 2px #585858;
+	color: var(--highlight);
+	cursor: pointer;
+	display: inline-block;
+	font-size: 0.8em;
+	font-weight: 900;
+	height: 3.5em;
+	letter-spacing: 0.35em;
+	line-height: 3.45em;
+	overflow: hidden;
+	padding: 0 1.25em 0 1.6em;
+	text-align: center;
+	text-decoration: none;
+	text-overflow: ellipsis;
+	text-transform: uppercase;
+	white-space: nowrap;
 }
 
 ol, ul {
@@ -293,6 +389,7 @@ input, select, textarea {
 		}
 
 	}
+
 
 	sub {
 		font-size: 0.8em;
@@ -2507,7 +2604,7 @@ input, select, textarea {
 		border-radius: 4px;
 		border: 0;
 		box-shadow: inset 0 0 0 2px #585858;
-		color: #585858 !important;
+		color: var(--text);
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.8em;
@@ -2612,6 +2709,40 @@ input, select, textarea {
 			opacity: 0.25;
 		}
 
+/* techStack */
+	.techStack {
+		display: block;
+		cursor: pointer;
+		width: 100%;
+		text-align: left;
+		font-size: 15px;
+	}
+
+		.techStack collapsible {
+			background-color: var(--bg);
+			color: var(--color);
+			cursor: pointer;
+			padding: 18px;
+			width: 100%;
+			border: none;
+			text-align: left;
+			outline: none;
+			font-size: 15px;
+		}
+
+		.techStack active, collapsible:hover {
+			display:block;
+		}
+
+		/* Style the collapsible content. Note: hidden by default */
+		.techStack collapseContent {
+			padding: 0 18px;
+			display: none;
+			max-height: 0;
+			overflow: hidden;
+			transition: max-height 0.2s ease-out;
+		}
+
 /* Tiles */
 
 	.tiles {
@@ -2624,7 +2755,6 @@ input, select, textarea {
 		-ms-flex-wrap: wrap;
 		flex-wrap: wrap;
 		position: relative;
-		margin: -2.5em 0 0 -2.5em;
 	}
 
 		.tiles article {
