--- a/portfolio/assets/css/main.css
+++ b/portfolio/assets/css/main.css
@@ -151,7 +151,7 @@ body {
 	-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 	transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 	background-color: transparent;
-	border-radius: 4px;
+	border-radius: 8px;
 	border: 0;
 	box-shadow: inset 0 0 0 2px #585858;
 	color: var(--highlight);
@@ -2775,7 +2775,8 @@ input, select, textarea {
 				position: relative;
 				display: block;
 				width: 100%;
-				border-radius: 4px;
+				border-radius: 32px;
+				border: solid 1px var(--highlight);
 				overflow: hidden;
 			}
 
